# tiny-agent-router

./: .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum  rsut-toolchain.toml
.github/workflows/: ci.yml
cache-service/: Cargo.toml  build.rs  example.config.toml  example.config.yaml  rustfmt.toml
cache-service/proto/: cache.pb.go  cache_grpc.pb.go
cache-service/src/: config.rs  embedding.rs  main.rs  metrics.rs  server.rs  storage.rs
cache-service/src/proto/: cache.rs
cmd/router/: main.go
configs/: config.example.yaml
internal/cache/: client.go
internal/cache/proto/: cache.pb.go
internal/config/: config.go
internal/metrics/: cost.go  otel.go
internal/proxy/: proxy.go
internal/router/: router.go
proto/: cache.proto
