# cache-service/Cargo.toml
[package]
name = "semantic-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }

# 向量计算
ndarray = "0.15"
num-traits = "0.2"

# 存储（默认 SQLite，轻量）
rusqlite = { version = "0.31", features = ["bundled"] }

# 工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"