[package]
name = "semantic-cache"
version = "0.1.0"
edition = "2024"

[features]
default = []
nightly-optimizations = []

[dependencies]
# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1.43", features = ["full", "tracing"] }
sha2 = "0.10"
hex = "0.4"

# 向量计算
ndarray = "0.16"
num-traits = "0.2"
# 启用 nightly 特性获得更快 cosine 计算
# ndarray = { version = "0.16", features = ["nightly"] }
ollama-rs = "0.2"

# 存储
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# 工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 显式约束，避免传递依赖冲突
getrandom = "0.4"
rand = "0.9"
uuid = { version = "1.23.0", features = ["v4"] }
bytemuck = "1.25.0"

[build-dependencies]
tonic-build = "0.12"


# nightly 专属优化
# [profile.release]
# codegen-units = 1
# lto = "fat"
# panic = "abort"
